Changes with Apache 1.3.18

  *) Apache/Win32 no longer holds open the console on error, except if
     the internal -w flag is specified as a shortcut argument.  Corrected
     bug that -t test config didn't hold the console open on "SYNTAX OK".
     [William Rowe]

  *) Apache on Win9x now ensures the service is stopped before removal.
     [William Rowe]

  *) SECURITY: The default installation could lead to mod_negotiation
     and mod_dir/mod_autoindex displaying a directory listing instead of
     the index.html.* files, if a very long path was created artificially
     by using many slashes. Now a 403 FORBIDDEN is returned.
     [Martin Kraemer]
     
  *) Trailing slashes (if they exist) are now removed from ServerRoot,
     because there were known problems with them.
     ["William A. Rowe, Jr." <wrowe@rowe-clan.net>]

  *) Changed ap_os_is_filename_valid on NetWare to accept 
     SERVER/VOLUME:/PATH/FILE as a valid filename pattern. 
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Win32/Netware: correct relative paths and eliminate trailing slash
     in the -d serverroot argument.  -d Serverroot may be relative to 
     the path of the Apache.exe file.  [William Rowe]

  *) Win32; fix the ServerRoot as the path of the Apache.exe file.
     Eliminates the requirement of a 'backup' registry key to locate
     the server root.  [William Rowe]

  *) NetWare MOD_TLS fixes to disable nagles properly when making an SSL
     connection, and properly detect an SSL connection based on the port
     and work around the r->server->port 80 bug.  
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) TPF startup/shutdown fixes. [David McCreedy <McCreedy@us.ibm.com>]

  *) Correct a typo in httpd.conf.
     [Kunihiro Tanaka <tanaka@apache.or.jp>] PR#7154 

  *) Get the correct IP address if ServerName isn't set and we can't
     find a fully-qualified domain name at startup.
     [Danek Duvall <dduvall@eng.sun.com>] PR#7170
