@@ -1,13 +1,12 @@
   1.3 STATUS:
-  Last modified at [$Date: 2001/02/13 22:26:07 $]
+  Last modified at [$Date: 2001/02/15 04:31:47 $]
 
 Release:
 
-    1.3.18-dev: Jim proposes to t/r around Feb 4, 2001.
-            As such, he also proposes a code freeze.
+    1.3.18-dev: Target t/r date Feb 1?, 2001, rel date Feb ??.
+            As such, Jim offers to t/r, proposes a code freeze.
     1.3.17: Tagged and rolled late Jan 26, 2001
-            To be Announced/Released Jan 29, 2001.
-            Jim offers to be RM. We are in code freeze
+            announced Jan 29, 2001.
     1.3.16: Tagged and Rolled Jan 20, 2001.
             Not released because of vhosting bug.
     1.3.15: Not released. Pulled due to CVS dumping core during the
@@ -33,15 +32,9 @@ Release:
     1.3.1: Tagged and rolled on July 19. Announced and released.
     1.3.0: Tagged and rolled on June 1.  Announced and released on the 6th.
            
-    2.0  : In pre-alpha development, see apache-2.0 repository
+    2.0  : In pre-alpha development, see httpd-2.0 repository
 
 RELEASE SHOWSTOPPERS:
-
-    PR7211 reports 1.3.17 has continuing mod_userdir bogosity.  Expect
-    the observation that we needed to test the first arg (x), instead of 
-    the remainder (userdir) for absolute path was correct.
-    See updated patch posted Mon, 12 Feb 2001 01:11:01 -0600
-     ID <00e101c094c2$f56531f0$95c0b0d0@roweclan.net> 
 
     Martin observed a core dump because a ipaddr_chain struct contains
     a NULL-"server" pointer when being dereferenced by invoking "httpd -S".
