@@ -1,5 +1,11 @@
 Changes with Apache 1.3.18
 
+  *) mod_user on Win32 bug introduced in 1.3.17 is corrected.  The parsing
+     is completely rewritten so all platforms share the same file/redirect
+     logic interpreting UserDir directives.  Specifying a Win32 or Netware
+     relative path or a relative path on any platform using an '*' now
+     emits an error when httpd.conf is first parsed.  [William Rowe]
+
   *) Apache/Win32 no longer holds open the console on error, except if
      the internal -w flag is specified as a shortcut argument.  Corrected
      bug that -t test config didn't hold the console open on "SYNTAX OK".
